--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "website_url": "https://github.com/neahyu-friends/VulcaSuperPack",
     "description": "Take my (super) modpack",
     "dependencies": [
-		"neahyu_friends-VulcaPack-2.1.0",
+		"neahyu_friends-VulcaPack-2.1.1",
 
 		"EladNLG-EladsHUD-1.2.1",
 		"Owen3H-IntroTweaks-1.5.0",
@@ -17,6 +17,8 @@
 
 		"sunnobunno-BonkHitSFX-1.0.5",
 		"sunnobunno-LandMineFartReverb-1.0.3",
+		"sunnobunno-YippeeMod-1.2.4",
+		"Canigou_Sudio-KarineLeBracken-1.2.0",
 
 		"TestAccount666-ShipWindows-1.3.6",
 		"sfDesat-Celestial_Tint-1.5.1",
